--- a/code/day01.ipynb
+++ b/code/day01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "486bb5a4-993c-4561-99d4-d608c14fbc35",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "1cf8dfb4-9b1b-447f-9e23-00cd6bcd2e1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../input/day01.txt') as f:\n",
+    "with open('../input/day01.txt') as f:\n",
     "    lines = [line.rstrip(\"\\n\").split() for line in f.readlines()]"
    ]
   },
