Update directory structure for file reading

--- a/day01.ipynb
+++ b/day01.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../input/day01.txt') as f:\n",
+    "with open('input/day01.txt') as f:\n",
     "    lines = [line.rstrip(\"\\n\").split() for line in f.readlines()]"
    ]
   },
