--- a/day02.ipynb
+++ b/day02.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "84db7358-6cf5-46b8-acae-ec5f02e9b6b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../input/day02.txt') as f:\n",
+    "with open('input/day02.txt') as f:\n",
     "    lines = [[int(val) for val in line.rstrip(\"\\n\").split()] for line in f.readlines()]"
    ]
   },
