--- a/day05.ipynb
+++ b/day05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 126,
    "id": "8425a616-b951-4c50-9692-f39c1e9a229a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 127,
    "id": "8541e36d-40a2-4a25-b028-3205493f2115",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "id": "a85c8231-5e09-4bec-b874-9987f7f3df2d",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 129,
    "id": "d0ac22b4-2d22-4366-8f76-b19726e760aa",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,8 @@
     "middle_pages_p1 = 0\n",
     "for update in updates:\n",
     "    pairs = set(combinations(update[::-1], 2))\n",
-    "    if not any(pair in rules for pair in pairs):\n",
+    "    relevant_rules = [rule for rule in rules if set(rule).issubset(set(update))]\n",
+    "    if not any(pair in relevant_rules for pair in pairs):\n",
     "        middle_pages_p1 += update[len(update)//2]\n",
     "    else:\n",
     "        incorrect_updates.append(update)"
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 130,
    "id": "72c6b1c3-f656-42c4-82e3-7e76cdc200fe",
    "metadata": {},
    "outputs": [
@@ -71,7 +72,7 @@
        "4662"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 131,
    "id": "78e7ae26-5648-4d6b-be83-638b3ffdcf88",
    "metadata": {},
    "outputs": [],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 132,
    "id": "c7922b06-0524-43c1-8d43-4ca942fd954a",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 133,
    "id": "b995ece5-9b15-41e1-a72d-a35d5fa3da2d",
    "metadata": {},
    "outputs": [
@@ -129,7 +130,7 @@
        "5900"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
