--- a/day06.ipynb
+++ b/day06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 205,
    "id": "d490bd7f-f2d8-4c6c-83e5-9e6cf7167535",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 206,
    "id": "321b8e6f-39dd-4f7b-bd2b-ce5435006992",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"input/day06.txt\") as f:\n",
-    "    map = np.array([list(line.rstrip(\"\\n\")) for line in f.readlines()])"
+    "    lab_map = np.array([list(line.rstrip(\"\\n\")) for line in f.readlines()])"
    ]
   },
   {
@@ -31,56 +31,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 207,
    "id": "fee1c5cd-b1dc-406c-abf8-e66a6d7e0712",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def change_direction(map):\n",
-    "    return np.flipud(map.T)"
+    "def change_direction(lab_map):\n",
+    "    return np.flipud(lab_map.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 208,
    "id": "d820df7d-1187-4d86-b7a3-6a3ea00353ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_new_location(orig_location, map):\n",
-    "    i = map.shape[1] - 1 - orig_location[1]\n",
-    "    j = orig_location[0]\n",
+    "def find_new_coords(current_coords, lab_map):\n",
+    "    i = lab_map.shape[1] - 1 - current_coords[1]\n",
+    "    j = current_coords[0]\n",
     "    return (i, j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 209,
    "id": "eda61d7c-e7d5-4bdd-9f43-3251c1df4f0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_position = np.where(map==\"^\")\n",
+    "start_position = np.where(lab_map==\"^\")\n",
     "next_position = (start_position[0][0], start_position[1][0])\n",
     "exit = False\n",
     "while not exit:\n",
-    "    map[next_position[0], next_position[1]] = \"X\" # mark our current position\n",
+    "    lab_map[next_position[0], next_position[1]] = \"X\" # mark our current position\n",
     "    if (next_position[0]-1) < 0: # make sure we don't loop around: if we've got a negative index, it means we've reached an edge\n",
     "        exit = True\n",
     "    else:\n",
-    "        # check if the next position contains an obstacle\n",
-    "        if map[next_position[0]-1, next_position[1]]==\"#\":\n",
-    "            # if so, rotate the map left before continuing\n",
-    "            map = change_direction(map)\n",
-    "            # and then find our new location\n",
-    "            next_position = find_new_location(next_position, map)\n",
-    "        # since we're rotating the map, we always stay in the same column and just go up one row\n",
-    "        next_position = (next_position[0]-1, next_position[1])"
+    "        if lab_map[next_position[0]-1, next_position[1]]==\"#\": # check if the next position contains an obstacle\n",
+    "            lab_map = change_direction(lab_map) # if so, rotate the lab_map left before continuing\n",
+    "            next_position = find_new_coords(next_position, lab_map) # and then find our new grid reference\n",
+    "        next_position = (next_position[0]-1, next_position[1]) # and finally determine our next position to check: since we're rotating the lab_map, we always stay in the same column and just go up one row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 210,
    "id": "846fc906-9c74-4430-bdb3-0a3ba1c48e53",
    "metadata": {},
    "outputs": [
@@ -90,13 +86,13 @@
        "4374"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.count_nonzero(map==\"X\")"
+    "np.count_nonzero(lab_map==\"X\")"
    ]
   },
   {
