Update Day 7 with Match Case

--- a/day07.ipynb
+++ b/day07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "748a8141-28a6-47e7-b625-20d2d0129c7d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "1f79eae7-c1c5-42aa-9b98-53f639961cc6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "966e4cff-b0dd-4233-87e9-dd6d8bca3dee",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,13 @@
     "        for i, number in enumerate(numbers[1:]):\n",
     "            if running_total > test_value:\n",
     "                break\n",
-    "            if operation[i]==\"add\":\n",
-    "                running_total += number\n",
-    "            elif operation[i]==\"mult\":\n",
-    "                running_total *= number\n",
-    "            elif operation[i]==\"concat\":\n",
-    "                running_total = int(str(running_total) + str(number))\n",
+    "            match operation[i]:\n",
+    "                case \"add\":\n",
+    "                    running_total += number\n",
+    "                case \"mult\":\n",
+    "                    running_total *= number\n",
+    "                case \"concat\":\n",
+    "                    running_total = int(str(running_total) + str(number))\n",
     "        if running_total == test_value:\n",
     "            return True\n",
     "    return False"
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "7d0807bd-9f51-42b3-ad0f-c88f3de68337",
    "metadata": {},
    "outputs": [],
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "b62e640d-e071-4e36-8595-3595e6f5336a",
    "metadata": {},
    "outputs": [
@@ -74,7 +75,7 @@
        "2664460013123"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,19 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "5ca25e5d-ab79-45b7-b838-714f6a46e5fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 4.66 s\n",
-      "Wall time: 14 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_p2 = 0\n",
     "for test_value, numbers in calibrations:\n",
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "bc9df49a-e710-4cfb-89e3-0e078770d82d",
    "metadata": {},
    "outputs": [
@@ -117,7 +109,7 @@
        "426214131924213"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
