Small optimisation for Day 7

--- a/day07.ipynb
+++ b/day07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "748a8141-28a6-47e7-b625-20d2d0129c7d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "1f79eae7-c1c5-42aa-9b98-53f639961cc6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "966e4cff-b0dd-4233-87e9-dd6d8bca3dee",
    "metadata": {},
    "outputs": [],
@@ -52,20 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "7d0807bd-9f51-42b3-ad0f-c88f3de68337",
    "metadata": {},
    "outputs": [],
    "source": [
     "result_p1 = 0\n",
+    "successes = []\n",
     "for test_value, numbers in calibrations:\n",
     "    if can_produce(test_value, numbers, [\"add\", \"mult\"]):\n",
+    "        successes.append((test_value, numbers))\n",
     "        result_p1 += test_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "b62e640d-e071-4e36-8595-3595e6f5336a",
    "metadata": {},
    "outputs": [
@@ -75,7 +77,7 @@
        "2664460013123"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,21 +88,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "5ca25e5d-ab79-45b7-b838-714f6a46e5fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.6 s ± 111 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "result_p2 = 0\n",
     "for test_value, numbers in calibrations:\n",
+    "    if (test_value, numbers) in successes:\n",
+    "        result_p2 += test_value\n",
+    "        continue\n",
     "    if can_produce(test_value, numbers, [\"add\", \"mult\", \"concat\"]):\n",
     "        result_p2 += test_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "bc9df49a-e710-4cfb-89e3-0e078770d82d",
+   "execution_count": 54,
+   "id": "e98e9076-1872-4dcd-b96c-6d36cb6d6767",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +122,7 @@
        "426214131924213"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
