Update Day 11 documentation

--- a/day11.ipynb
+++ b/day11.ipynb
@@ -38,8 +38,8 @@
    "outputs": [],
    "source": [
     "# Recursive function which works for Part 1 but fails with MemoryError for Part 2\n",
-    "# Memoization doesn't work because the function works on a full list of numbers rather than on a single number\n",
-    "# @lru_cache(maxsize=100)\n",
+    "# Memoization doesn't work because the function works on a full list of numbers rather than on a single number so there's nothing useful to store\n",
+    "# @lru_cache(None)\n",
     "def blink_recursive(initial_arrangement, times):\n",
     "    if times==0:\n",
     "        return initial_arrangement\n",
