Update Day 11 documentation

--- a/day11.ipynb
+++ b/day11.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "b93814a3-ad2d-47ed-b67a-8559c905c348",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "e8b97bfc-5416-48cb-945a-f4790c607519",
    "metadata": {},
    "outputs": [],
@@ -106,8 +106,8 @@
     "# Function which uses a Counter for unique stone engravings rather than building the whole list: works for Part 2 and is also muuuuuch faster for Part 1\n",
     "def blink_counter(counter, times):\n",
     "    for _ in range(times):\n",
-    "        new_counter = dict(counter)\n",
-    "        for stone, count in new_counter.items():\n",
+    "        current_stones = dict(counter)\n",
+    "        for stone, count in current_stones.items():\n",
     "            if count==0: # if there's none of this number in the current arrangement, no need to do anything with it\n",
     "                continue\n",
     "            # we always need to move the count away from the current stone to its new value\n",
